--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     build:
       context: './master'
       args:
-        #- REGISTRY=registry.hub.docker.com
-        - REGISTRY=dev-brm.so.kadaster.nl:5000
+        - REGISTRY=registry.hub.docker.com
+        #- REGISTRY=dev-brm.so.kadaster.nl:5000
 
     ports:
       - "4505:4505"
